# NPU-

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  SnapdragonAudioStudio.spec  audio-lossless-assistant.desktop  audio_desktop_app.py  audio_lossless_assistant.py  audio_streaming_studio_app.py  build_windows_exe.bat  guardian_blacklist.py  npu_audio_enhancement_assistant.py  pyproject.toml  snapdragon_streaming_studio.py  test_audio_desktop_app.py  test_audio_lossless_assistant.py  test_audio_streaming_studio_app.py  test_guardian_blacklist.py  test_npu_audio_enhancement_assistant.py  test_snapdragon_streaming_studio.py  test_windows_ldac_assistant.py  windows_ldac_assistant.py
config/: service_profiles.json
configs/: service_profiles.json
docs/: audio-quality-algorithm.md  npu_algorithm.md  npu_audio_algorithm.md  npu_pipeline.md  snapdragon-x-npu-audio-architecture.md  snapdragon-x-npu-execution.md  snapdragon_x_npu_audio_architecture.md  snapdragon_x_plan.md
include/audio_enhancer/: audio_frame.h  audio_pipeline.h  npu_backend.h  wav_io.h
include/npu_audio/: audio_buffer.hpp  enhancer.hpp  inference_backend.hpp  processing_types.hpp  realtime_enhancer.hpp  wav_io.hpp
native/windows/: build.ps1  build.sh  installer.cpp  main.cpp  resource.h
profiles/: streaming-default.json
scripts/linux/: install_cursor_desktop_launcher.sh  run_desktop_app.sh
scripts/windows/: create_desktop_shortcut.ps1
src/: dsp.rs  engine.rs  inference.rs  lib.rs  main.cpp  profile.rs
src/app/: main.cpp
src/audio_capture/: README.md  audio_capture_source.h  wasapi_loopback_capture.h
src/audio_enhancer/: __init__.py
src/audio_enhancer/dsp/: __init__.py  enhancer.py  frame.py
src/audio_enhancer/inference/: __init__.py  provider.py
src/dsp/: audio_frame.cpp  audio_frame.h  audio_math.h  audio_metrics.cpp  audio_metrics.h  audio_pipeline.cpp  audio_types.h  biquad.cpp  biquad.h  enhancement_pipeline.cpp  enhancement_pipeline.h  enhancer.cpp  enhancer.h  enhancer.py  limiter.cpp  limiter.h  realtime_enhancer.cpp
src/inference/: __init__.py  backend.cpp  enhancement_model.cpp  enhancement_model.h  npu_backend.cpp  npu_backend.h  runtime.py
src/io/: wav_io.cpp
src/npu_audio_enhancer/: __init__.py  __main__.py  audio.py  audio_frame.py  audio_types.py  cli.py  desktop.py  dsp.py  frame.py  inference.py  npu.py  pipeline.py  profiles.py  realtime.py  recommendation.py  recommender.py  reports.py  service_profiles.py  settings.py  wav_io.py
src/npu_audio_enhancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/npu_audio_enhancer/dsp/: __init__.py  eq.py  frame.py  limiter.py  loudness.py  pipeline.py
src/npu_audio_enhancer/inference/: __init__.py  backend.py
src/npu_audio_enhancer/profile/: __init__.py  model.py
src/profile/: listening_profile.cpp  listening_profile.h  service_profile.cpp  service_profile.h
src/snapdragon_audio_enhancer/: __init__.py  audio.py  audio_types.py  cli.py  config.py  dsp.py  inference.py  npu.py  pipeline.py  profile.py  profiles.py  service_profiles.py  wav_io.py
src/snapdragon_npu_audio/: __init__.py  audio.py  audio_frame.py  backends.py  cli.py  dsp.py  frames.py  inference.py  models.py  npu.py  pipeline.py  profiles.py  service_profiles.py  types.py  wav_io.py
src/snapdragon_npu_audio_enhancer/: __init__.py  audio.py  audio_frame.py  cli.py  dsp.py  inference.py  models.py  pipeline.py  profiles.py  service_policy.py  service_profiles.py  services.py  wav_io.py
src/sxnpu_audio_enhancer/: __init__.py  cli.py  config.py  dsp.py  inference.py  pipeline.py  wav_io.py
tests/: audio_pipeline_tests.cpp  dsp_pipeline_tests.cpp  dsp_tests.cpp  pipeline.rs  test_audio_enhancement.py  test_audio_enhancer.py  test_audio_frame.py  test_audio_pipeline.py  test_cli.py  test_config.py  test_dsp.py  test_dsp_pipeline.py  test_enhancer.py  test_inference.py  test_inference_pipeline.py  test_inference_provider.py  test_pipeline.py  test_profiles.py  test_service_profiles.py  test_services.py  test_wav_io.py
tools/: enhance_wav.cpp
