[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "snapdragon-audio-enhancer"
version = "0.1.0"
description = "Prototype DSP and NPU orchestration for Snapdragon X audio enhancement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cursor Automation" }]

[project.scripts]
snapdragon-audio-enhance = "snapdragon_audio_enhancer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
