[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snapdragon-x-npu-audio-enhancer"
version = "0.1.0"
description = "Low-latency audio enhancement foundation for Snapdragon X NPU PCs."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "NPU Audio Enhancer Contributors" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
