[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "snapdragon-npu-audio-enhancer"
version = "0.1.0"
description = "Prototype DSP and Snapdragon X NPU backend selection for system-wide music enhancement."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Cursor Automation" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
onnx = ["onnxruntime>=1.18"]

[project.scripts]
npu-audio-enhance = "npu_audio_enhancer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
